2005-04-01  Jeff Zucker <jzuckerATcpan.org> (0.22)

	* removed DESTROY and disconnect - use DBD File's instead

	* added ignore_missing_table flag to avoid warnings with
	  DROP TABLE IF EXISTS
	
2004-04-18  Jeff Zucker <jzuckerATcpan.org> (0.21)

	* added support for $dbh->{Active}, should now work 
	  well with Class::DBI and other caching systems

	* added support for DROP TABLE IF EXISTS - doesn't
	  complain if table is already dropped

	* removed DBD::File from the distribution - it's now
	  distributed with DBI 1.42 and higher
	
2002-03-01  Jeff Zucker <jzuckerATcpan.org> (0.2002)

	* added parser-caching for speedier operation,
	  see File.pm prepare()

	* further adjustments in tests including fix for
	  prototypes to make it perl 5.8 compatible


2002-01-21  Jeff Zucker <jzuckerATcpan.org> (0.2001)

	* adjusted docs to show Jeff as the new maintainer.

	* added docs for extended SQL features (joins, etc.)
	  available with SQL::Statement 1.0 and above.

	* adjusted tests blobs.t, chopblanks.t, and ak-dbd.t
	  to work with all versions of SQL::Statement.

2002-12-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1030)

        * lib/DBD/File.pm: Locking is now suppressed under
          VMS. David Webb <d.webb@mdx.ac.uk>
        * lib/DBD/CSV.pm: Added a hint to the docs, that
          "f_dir=" is required for the current directory
          on VMS and not "f_dir=.". David Webb
          <d.webb@mdx.ac.uk>

2001-11-28  Jochen Wiedmann  <joe@ispsoft.de> (0.1029)

	* lib/DBD/CSV.pm (fetch_row): A numeric value
	  must be assigned to $!.

2001-11-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1028)

	* lib/DBD/CSV.pm (fetch_row): Changed "undef $!"
	  to "$! = ''". David Arnold <arnoldd@aecl.ca>

2001-05-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1026)

	* lib/DBD/File.pm (table_info): Added closedir().
	  Alex Hornby <alex@anvil.co.uk>

2000-12-22  Jochen Wiedmann  <joe@ispsoft.de> (0.1025)

	* lib/DBD/CSV.pm (fetch_row): Now cleaning $! before