@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-CSV
-version:      0.22
+version:      0.23
 version_from: lib/DBD/CSV.pm
 installdirs:  site
 requires:
